great progress. need to add more

--- a/index.html
+++ b/index.html
@@ -18,12 +18,17 @@
 
           <!-- Card -->
           <!-- Start -->
-          <div class="card card-top" id="currentCard">
+          <div class="card card-top whiteish" id="currentCard">
             <div class="card-body">
-              <img src="/pictures/nosotros.png" alt="" class="mt-4">
-              <h2 class="card-title my-2">Algo que decirte...</h2>
-              <p class="card-text">Para Lucía</p>
-              <p class="card-text">Con mucho amor, Diego</p>
+              <div class="card-image-container">
+                <img src="/pictures/nosotros.png" alt="" class="card-image mt-4">
+              </div>
+              <p class="card-description">esta foto la hicimos chat gpt y yo, nos quedó épica</p>
+              <div class="card-text-container">
+                <h2 class="card-title my-2">Algo que decirte...</h2>
+                <p class="card-text">Para Lucía</p>
+                <p class="card-text">Con mucho amor, <br> Diego</p>
+              </div>
               <span class="material-symbols-sharp align-self-end">
                 swipe
               </span>
@@ -40,7 +45,9 @@
                 hablamos mucho y recuerdo q dije en mi mente la Lucía es <i>bien buena onda</i>.
                 Me acuerdo que te pregunté que si te gustaban los boleros.
               </p>
-              <img src="/pictures/Pic1.jpg" alt="" srcset="" class="ml-5 w-75 card-image">
+              <div class="card-image-container">
+                <img src="/pictures/Pic1.jpg" alt="" srcset="" class="card-image">
+              </div>
               <p class="card-description mb-0 text-center">
                 Foto de esa noche, no estaba ebrio (depende).
               </p>
@@ -52,7 +59,7 @@
           <!-- Whatsapp convo -->
           <div class="card next">
             <div class="card-body">
-              <h3 class="card-title mb-1 p-1">First impressions: me enamoré</h3>
+              <h3 class="card-title mb-1 p-1">Primeras impresiones: me enamoré de ti</h3>
               <div class="conversation shadow">
                 <div class="date mx-auto">Aug 5, 2022</div>
                 <div class="message left">
@@ -83,13 +90,59 @@
                   </div>
                 </div>
               </div>
+              <p class="card-description">Literalmente ya me quiero casar contigo.</p>
             </div>
           </div>
 
+          <!-- Card -->
+          <!-- Me encantas tu -->
           <div class="card next">
             <div class="card-body">
-              <h3 class="card-title">Diego Carta 4</h3>
-              <p class="card-text">Quieres ser.</p>
+              <h3 class="card-title">... Y cada día me enamoro más de tí</h3>
+              <p class="card-text">
+                Es injusto intentar describir con palabras la <b>gran persona</b> que eres, 
+                no hay manera de explicarlo. Me encanta tu bondad con los demás, tu lealtad, 
+                tus ojos, tu sonrisa, tu forma de ser; me encantas tu.
+              </p>
+              <div class="image-container text-center">
+                <img src="/pictures/luchy_y_yo.JPG" alt="" class="card-image">
+              </div>
+              <p class="card-description">dudosísima esa cosa q pedí de tomar no te voy a mentir.</p>
+            </div>
+          </div>
+
+          <!-- Card -->
+          <!-- Contigo -->
+          <div class="card next whiteish">
+            <div class="card-body">
+              <h3 class="card-title">Contigo, conmigo, siempre</h3>
+              <p class="card-text">
+                Y es que no importa la <b>distancia</b> o el <b>lugar</b> en dónde esté, siempre 
+                te llevo conmigo. Todo me recuerda a ti, siempre pienso en ti.
+                Gracias por acompañarme y por permitirme estar en tu vida.
+                <br> <b> <i>Miluji tě</i> (I love you in Czech 🫰🏼) </b>
+              </p>
+              <div class="image-container text-center">
+                <img src="/pictures/world.png" alt="" class="card-image" id="map">
+              </div>
+              <p class="card-description">El Petr m enseñó esa frase checa (puede cer).</p>
+            </div>
+          </div>
+
+          <!-- Card -->
+          <!-- Canciones -->
+          <div class="card next">
+            <div class="card-body">
+              <h3 class="card-title"></h3>
+              <p class="card-text">
+                Es injusto intentar describir con palabras la <b>gran persona</b> que eres, 
+                no hay manera de explicarlo. Me encanta tu bondad con los demás, tu lealtad, 
+                tus ojos, tu sonrisa, tu forma de ser; me encantas tu.
+              </p>
+              <div class="image-container text-center">
+                <img src="/pictures/luchy_y_yo.JPG" alt="" class="card-image">
+              </div>
+              <p class="card-description">dudosísima esa cosa q pedí de tomar no te voy a mentir.</p>
             </div>
           </div>
 
