Added more cards. Changed background

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       <div class="col-12 w-100">
         <div class="card-container" id="cardContainer">
 
+          <!-- <div class="card card-top" id="currentCard">
+            
+          </div> -->
           <!-- Card -->
           <!-- Start -->
           <div class="card card-top whiteish" id="currentCard">
@@ -100,7 +103,7 @@
             <div class="card-body">
               <h3 class="card-title">... Y cada día me enamoro más de tí</h3>
               <p class="card-text">
-                Es injusto intentar describir con palabras la <b>gran persona</b> que eres, 
+                Las palabras no hacen justicia para describir la <b>gran persona</b> que eres, 
                 no hay manera de explicarlo. Me encanta tu bondad con los demás, tu lealtad, 
                 tus ojos, tu sonrisa, tu forma de ser; me encantas tu.
               </p>
@@ -118,7 +121,7 @@
               <h3 class="card-title">Contigo, conmigo, siempre</h3>
               <p class="card-text">
                 Y es que no importa la <b>distancia</b> o el <b>lugar</b> en dónde esté, siempre 
-                te llevo conmigo. Todo me recuerda a ti, siempre pienso en ti.
+                te llevo en mi corazón. Todo me recuerda a ti, siempre pienso en ti.
                 Gracias por acompañarme y por permitirme estar en tu vida.
                 <br> <b> <i>Miluji tě</i> (I love you in Czech 🫰🏼) </b>
               </p>
@@ -133,16 +136,19 @@
           <!-- Canciones -->
           <div class="card next">
             <div class="card-body">
-              <h3 class="card-title"></h3>
+              <h3 class="card-title">Pero te gustan los boleros o no</h3>
               <p class="card-text">
-                Es injusto intentar describir con palabras la <b>gran persona</b> que eres, 
-                no hay manera de explicarlo. Me encanta tu bondad con los demás, tu lealtad, 
-                tus ojos, tu sonrisa, tu forma de ser; me encantas tu.
+                Siempre te encuentro en mis pensamientos, en mi corazón, pero también en canciones.
               </p>
-              <div class="image-container text-center">
-                <img src="/pictures/luchy_y_yo.JPG" alt="" class="card-image">
-              </div>
-              <p class="card-description">dudosísima esa cosa q pedí de tomar no te voy a mentir.</p>
+              <iframe class="iframe-height" style="border-radius:12px" src="https://open.spotify.com/embed/track/65DzdjRWH35DNsBZBjW523?utm_source=generator" width="100%" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+              <iframe class="iframe-height" style="border-radius:12px" src="https://open.spotify.com/embed/track/0RayTAbupCL4o2F54f9tCP?utm_source=generator" width="100%" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+              <iframe class="iframe-height" style="border-radius:12px" src="https://open.spotify.com/embed/track/1Tv19lrP4rfJpRbFgbkQce?utm_source=generator" width="100%" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+              <iframe class="iframe-height" style="border-radius:12px" src="https://open.spotify.com/embed/track/6TCnhziFkBPhOTqvh8zVDU?utm_source=generator" width="100%" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+              <iframe class="iframe-height" style="border-radius:12px" src="https://open.spotify.com/embed/track/2uuJs2nltcYFh9pkKP7bW4?utm_source=generator" width="100%"frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+              <p class="card-description">
+                Canciones que me recuerdan a ti. La de mi bello angel del nata tambn m recuerda
+                mucho a ti pero no la puse porq t iba a dar cringe.
+              </p>
             </div>
           </div>
 
