--- a/index.html
+++ b/index.html
@@ -152,6 +152,39 @@
             </div>
           </div>
 
+          <!-- Card -->
+          <div class="card next">
+            <div class="card-body">
+              <div class="card-image-container">
+                <img src="/pictures/nosotros.png" alt="" class="card-image mt-4">
+              </div>
+              
+              <div class="card-text-container">
+                <h2 class="card-title my-2">Algo que preguntarte...</h2>
+              </div>
+            </div>
+          </div>
+
+           <div class="card next">
+            <div class="card-body">
+              <h3 class="card-title">Me gustas mucho</h3>
+              <p class="card-text">
+                Me gustas mucho, me haces muy feliz! Siempre que estoy contigo
+                el tiempo pasa volando, la vida es mas bonita. Quiero estar contigo
+                siempre, por eso, tengo algo que preguntarte...
+              </p>
+            </div>
+          </div>
+
+          <div class="card next">
+            <div class="card-body">
+              
+              <div class="card-text-container">
+                <h2 class="card-title my-2">Quiéres ser mi novia?</h2>
+              </div>
+            </div>
+          </div>
+
           <div class="card next" style="height: 80vh;">
           </div>
 
