--- a/index.html
+++ b/index.html
@@ -153,10 +153,10 @@
           </div>
 
           <!-- Card -->
-          <div class="card next">
+          <div class="card next whiteish">
             <div class="card-body">
               <div class="card-image-container">
-                <img src="/pictures/nosotros.png" alt="" class="card-image mt-4">
+                <img src="/pictures/drawing2.png" alt="" class="card-image mt-4">
               </div>
               
               <div class="card-text-container">
