--- a/index.html
+++ b/index.html
@@ -173,6 +173,10 @@
                 el tiempo pasa volando, la vida es mas bonita. Quiero estar contigo
                 siempre, por eso, tengo algo que preguntarte...
               </p>
+              <div class="image-container text-center">
+                <img src="/pictures/Final.png" alt="" class="card-image" id="map">
+              </div>
+              <p class="card-description">Literalmente bp</p>
             </div>
           </div>
 
@@ -180,7 +184,7 @@
             <div class="card-body">
               
               <div class="card-text-container">
-                <h2 class="card-title my-2">Quiéres ser mi novia?</h2>
+                <h1 class="card-title my-2">Quiéres ser mi novia?</h1>
               </div>
             </div>
           </div>
