--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 siempre, por eso, tengo algo que preguntarte...
               </p>
               <div class="image-container text-center">
-                <img src="/pictures/Final.png" alt="" class="card-image" id="map">
+                <img src="/pictures/Final.PNG" alt="" class="card-image" id="map">
               </div>
               <p class="card-description">Literalmente bp</p>
             </div>
