--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <div class="card-body">
               
               <div class="card-text-container">
-                <h1 class="card-title my-2">Quiéres ser mi novia?</h1>
+                <h1 class="card-title my-2">Quieres ser mi novia?</h1>
               </div>
             </div>
           </div>
